<resources>
    <string name="app_name">BeOnTime</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="open" />
    <string name="close" />
    <string name="emailiderror">Enter Valid Email-ID</string>
    <string name="passworderror">Enter Password of Minimum 6 length</string>

    <string name="username">Username</string>
    <string name="time">Please pick up the time in this field</string>

    <string name="mobile_number">Mobile Number</string>


    <string name="signup">SignUp</string>
    <string name="password">Password</string>
    <string name="EmailID">Email-ID</string>
    <string name="login">login</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_assignment_view">AssignmentView</string>
    <string name="tnameerror">Enter Valid Task Name</string>


</resources>
